# bitcoin-authorship-proof

./: .gitignore  Bitcoin_Notarized_SignKit_v1.zip.asc  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  SIGNATURE.asc  SIGNATURE.md  SIGN_FINAL.md  SIGN_TEST.md  SIGN_TEST_FINAL.md  SIGN_TEST_OK.md  SIGN_TEST_SUCCESS.md  configure.ac  genesis_filled.json  index.html  insert_authorship_headers.sh  public.asc  satoshi-proof.txt.asc
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/workflows/: manage-azure-policy-4ea3df06.yml  manage-azure-policy-c9032579.yml
ci/: README.md
ci/retry/: README.md
contrib/: README.md  filter-lcov.py
contrib/asmap/: README.md  asmap-tool.py  asmap.py
contrib/devtools/: README.md  circular-dependencies.py  clang-format-diff.py  copyright_header.py  gen-manpages.py  headerssync-params.py  security-check.py  symbol-check.py  utils.py
contrib/guix/: INSTALL.md  README.md  security-check.py  symbol-check.py
contrib/init/: README.md
contrib/linearize/: README.md  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md
contrib/message-capture/: message-capture-docs.md  message-capture-parser.py
contrib/qos/: README.md
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_signet.txt  nodes_test.txt  nodes_testnet4.txt
contrib/signet/: README.md  getcoins.py
contrib/testgen/: README.md  gen_key_io_test_vectors.py
contrib/tracing/: README.md  log_raw_p2p_msgs.py  (+3 more)
depends/: README.md  description.md  packages.md
doc/: CMakeLists.txt  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-27826.md  release-notes-31278.md  (+13 more)
src/: CMakeLists.txt  Makefile.test.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  (+116 more)
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/ipc/capnp/: common-types.h  context.h  echo-types.h  init-types.h  mining-types.h  mining.cpp  protocol.cpp  protocol.h
src/ipc/libmultiprocess/: CMakeLists.txt  README.md
src/ipc/libmultiprocess/doc/: design.md  install.md  usage.md
src/ipc/libmultiprocess/example/: CMakeLists.txt  calculator.cpp  calculator.h  example.cpp  init.h  printer.cpp  printer.h  types.h
src/ipc/libmultiprocess/include/mp/: proxy-io.h  proxy-types.h  proxy.h  type-char.h  type-chrono.h  type-context.h  type-data.h  type-decay.h  type-exception.h  type-function.h  type-interface.h  type-map.h  type-message.h  type-number.h  type-optional.h  type-pair.h  type-pointer.h  type-set.h  type-string.h  type-struct.h  type-threadmap.h  type-tuple.h  type-vector.h  type-void.h  util.h
src/ipc/libmultiprocess/src/mp/: gen.cpp  proxy.cpp  util.cpp
src/ipc/libmultiprocess/test/: CMakeLists.txt
src/ipc/libmultiprocess/test/mp/test/: foo-types.h  foo.h  test.cpp
src/secp256k1/examples/: CMakeLists.txt  ecdh.c  ecdsa.c  ellswift.c  examples_util.h  musig.c  schnorr.c
src/test/fuzz/util/: CMakeLists.txt  check_globals.cpp  check_globals.h  descriptor.cpp  descriptor.h  mempool.cpp  mempool.h  net.cpp  net.h  wallet.h
src/test/util/: CMakeLists.txt  README.md  blockfilter.cpp  blockfilter.h  chainstate.h  cluster_linearize.h  coins.cpp  coins.h  coverage.cpp  coverage.h  json.cpp  json.h  logging.cpp  logging.h  mining.cpp  mining.h  net.cpp  net.h  poolresourcetester.h  random.cpp  random.h  script.cpp  script.h  setup_common.cpp  setup_common.h  str.cpp  str.h  time.cpp  time.h  transaction_utils.cpp  transaction_utils.h  txmempool.cpp  txmempool.h  validation.cpp  validation.h
src/util/: CMakeLists.txt  any.h  asmap.cpp  asmap.h  batchpriority.cpp  batchpriority.h  bip32.cpp  bip32.h  bitdeque.h  bitset.h  byte_units.h  bytevectorhash.cpp  bytevectorhash.h  chaintype.cpp  chaintype.h  check.cpp  check.h  epochguard.h  exception.cpp  exception.h  exec.cpp  exec.h  fastrange.h  feefrac.cpp  feefrac.h  fs.cpp  fs.h  fs_helpers.cpp  fs_helpers.h  golombrice.h  hash_type.h  hasher.cpp  hasher.h  insert.h  macros.h  moneystr.cpp  moneystr.h  overflow.h  overloaded.h  rbf.cpp  (+35 more)
src/wallet/test/: CMakeLists.txt  coinselection_tests.cpp  coinselector_tests.cpp  db_tests.cpp  feebumper_tests.cpp  group_outputs_tests.cpp  init_test_fixture.cpp  init_test_fixture.h  init_tests.cpp  ismine_tests.cpp  psbt_wallet_tests.cpp  scriptpubkeyman_tests.cpp  spend_tests.cpp  util.cpp  util.h  wallet_crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp  wallet_transaction_tests.cpp  walletdb_tests.cpp  walletload_tests.cpp
src/wallet/test/fuzz/: CMakeLists.txt  coincontrol.cpp  coinselection.cpp  crypter.cpp  fees.cpp  parse_iso8601.cpp  scriptpubkeyman.cpp  spend.cpp  wallet_bdb_parser.cpp
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
test/: CMakeLists.txt  README.md  get_previous_releases.py
(+1481 files in other folders)
